fix newsletter popup style and z-index

--- a/src/components/landingPage/landingPage.scss
+++ b/src/components/landingPage/landingPage.scss
@@ -5,11 +5,24 @@
         display:none;
         z-index: 10;
     }
-    .newsletter-popup{
-        h2{
-            font-size: 24px;
-            color: red;
-        }
+    .popup{
+        z-index: 10;
+        width: 100%;
+        height: 35%;
+        position: fixed;
+            h2{
+                padding: 20px;
+                padding-bottom: 0px;
+                font-size: 32px;
+            }
+            button{
+                color:black;
+                height: 30px;
+                width: 30px;
+                font-size: 20px;
+                line-height: 25px;
+
+            }
     }
 
     #landing1{
@@ -258,7 +271,7 @@
             padding-bottom: 10px;
             p{
                 position: relative;
-                text-align: center;
+                text-align: center; 
                 border: 0;
                 padding: 5px;
                 float: none;
